GemBow pulling duration is bugged

--- a/src/main/resources/assets/allthatmatters/lang/en_us.json
+++ b/src/main/resources/assets/allthatmatters/lang/en_us.json
@@ -52,6 +52,8 @@
   "item.allthatmatters.tool_sapphire_shovel": "Sapphire Shovel",
   "item.allthatmatters.tool_sapphire_sword": "Sapphire Sword",
 
+  "item.allthatmatters.tool_ruby_bow": "Ruby Bow",
+
   "item.allthatmatters.armor_amethyst_helmet": "Amethyst Helmet",
   "item.allthatmatters.armor_amethyst_chestplate": "Amethyst Chestplate",
   "item.allthatmatters.armor_amethyst_leggings": "Amethyst Leggings",
