Hammer Items are finished Enderite Pickaxe breaks bedrock Enderite Armor gives creative flight status effect

--- a/src/main/resources/assets/allthatmatters/lang/en_us.json
+++ b/src/main/resources/assets/allthatmatters/lang/en_us.json
@@ -185,5 +185,7 @@
   "allthatmatters.tooltip.liquid.amount": "%s mB",
   "block.minecraft.empty": "Empty",
   "allthatmatters.all": "All",
-  "allthatmatters.none": "None"
+  "allthatmatters.none": "None",
+
+  "effect.allthatmatters.flight": "Flight"
 }
