Added smeltery and cast press blocks. Time to deal with cast press block entity!

--- a/src/main/resources/assets/allthatmatters/lang/en_us.json
+++ b/src/main/resources/assets/allthatmatters/lang/en_us.json
@@ -209,6 +209,8 @@
   "block.allthatmatters.ore_enderite": "Enderite Debris",
   "block.allthatmatters.chunk_loader": "Chunk Loader",
   "block.allthatmatters.gem_cleanser": "Gem Cleanser",
+  "block.allthatmatters.cast_press": "Cast Press",
+  "block.allthatmatters.smeltery": "Smeltery",
   "block.allthatmatters.enderite_shulker_normal": "Enderite Shulker Box",
   "block.allthatmatters.enderite_shulker_black": "Black Enderite Shulker Box",
   "block.allthatmatters.enderite_shulker_blue": "Blue Enderite Shulker Box",
