Trying to move the item count needed for recipe to the json

--- a/src/main/resources/assets/allthatmatters/lang/en_us.json
+++ b/src/main/resources/assets/allthatmatters/lang/en_us.json
@@ -24,8 +24,8 @@
   "item.allthatmatters.tool_gold_hammer": "Gold Hammer",
   "item.allthatmatters.tool_iron_hammer": "Iron Hammer",
   "item.allthatmatters.tool_netherite_hammer": "Netherite Hammer",
-  "item.allthatmatters.tool_stone_hammer": "Wood Hammer",
-  "item.allthatmatters.tool_wood_hammer": "Stone Hammer",
+  "item.allthatmatters.tool_stone_hammer": "Stone Hammer",
+  "item.allthatmatters.tool_wood_hammer": "Wood Hammer",
   "item.allthatmatters.tool_enderite_axe": "Enderite Axe",
   "item.allthatmatters.tool_enderite_hammer": "Enderite Hammer",
   "item.allthatmatters.tool_enderite_hoe": "Enderite Hoe",
